added RecipesNew component and page, not fully functional yet

--- a/src/Modal.css
+++ b/src/Modal.css
@@ -28,3 +28,11 @@
   top: 0em; 
   right: 0.2em;
 }
+
+.modal-main button.close:hover {
+  cursor: pointer;
+}
+
+.hidden {
+  visibility: hidden;
+}
